[VEG-125] feature: add user registration
